Adjust the content.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div  class="col-xs-12 col-sm-12 col-md-9 pull-left">
 					<h1>Hi, I'm Lihsuan CHEN</h1>
 					<p>
-						I'm playing with iOS, Rails and <a href="#skills">more</a>.
+						I'm playing with iOS, web and <a href="#skills">more</a>.
 					</p>
 				</div>
 			</div>
@@ -156,9 +156,9 @@
 					<div class="row">
 						<div class="col-md-12">
 						<h3>Languages</h3>
-						<p><strong>中文</strong> - Native</p>
+						<p><strong>Mandarine</strong> - Native</p>
 						<p><strong>English</strong> - Professional Fluent (TOEIC 860)</p>
-						<p><strong>日本語</strong> - Professional Fluent (JLPT N1)</p>
+						<p><strong>Japanese</strong> - Professional Fluent (JLPT N1)</p>
 						</div>
 					</div>
 				</div>
@@ -176,11 +176,6 @@
 									<span class="badge">UI Engineer</span>
 									<span class="badge">Video</span>
 									<span class="badge">Messenging</span>
-								</small>
-							</li>
-							<li>React Native
-								<small>
-									<span class="badge">TypeScript</span>
 								</small>
 							</li>
 							<li>Android
@@ -269,7 +264,7 @@
 						<div class="row">
 							<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
 								<a class="btn btn-default btn-sm btn-disable" target="_blank" disable>
-									<i class="fa fa-close"></i> &nbsp; <small>Unable to be Downloaded</small>
+									<i class="fa fa-close"></i> &nbsp; <small>Terminated</small>
 								</a>
 								<h4>iOS app - 2015 Taiwan International Festival of Hakka Culture</h4>
 								<p>
@@ -280,8 +275,8 @@
 								</p>
 							</div>
 							<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-								<a class="btn btn-default btn-sm btn-disable" target="_blank" disable>
-									<i class="fa fa-close"></i> &nbsp; <small>Unable to be Downloaded</small>
+								<a class="btn btn-default btn-sm btn-disable" disable>
+									<i class="fa fa-close"></i> &nbsp; <small>Terminated</small>
 								</a>
 								<h4>體委會 - iSport (i運動) iOS app</h4>
 								<p>
@@ -292,8 +287,8 @@
 								</p>
 							</div>
 							<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-								<a class="btn btn-default btn-sm btn-disable" target="_blank" disable>
-									<i class="fa fa-close"></i> &nbsp; <strong>Terminated</strong>
+								<a class="btn btn-default btn-sm btn-disable" disable>
+									<i class="fa fa-close"></i> &nbsp; <small>Terminated</small>
 								</a>
 								<h4>iOS app</h4>
 								<p>
@@ -305,8 +300,8 @@
 								</p>
 							</div>
 							<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-								<a class="btn btn-default btn-sm btn-disable" target="_blank" disable>
-									<i class="fa fa-close"></i> &nbsp; <strong>Terminated</strong>
+								<a class="btn btn-default btn-sm btn-disable" disable>
+									<i class="fa fa-close"></i> &nbsp; <small>Terminated</small>
 								</a>
 								<h4>Social Reading iOS app</h4>
 								<p>
@@ -321,8 +316,8 @@
 						<hr>
 						<div class="row">
 							<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-								<a href="https://itunes.apple.com/us/app/phpconf-taiwan-2014/id918190667?mt=8" class="btn btn-default btn-sm" target="_blank">
-									<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
+								<a class="btn btn-default btn-sm btn-disable" disable>
+									<i class="fa fa-close"></i> &nbsp; <small>Terminated</small>
 								</a>
 								<h4>PHPConf Taiwan 2014 iOS app</h4>
 								<p>
@@ -331,8 +326,8 @@
 								</p>
 							</div>
 							<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-								<a href="https://itunes.apple.com/us/app/tallyup-for-costco/id932235451?mt=8" class="btn btn-default btn-sm" target="_blank">
-									<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
+								<a class="btn btn-default btn-sm btn-disable" disable>
+									<i class="fa fa-close"></i> &nbsp; <small>Terminated</small>
 								</a>
 								<h4>Tallyup for Costco</h4>
 								<p>
@@ -341,8 +336,8 @@
 								</p>
 							</div>
 							<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-								<a href="https://itunes.apple.com/us/app/phpconf-taiwan-2014/id918190667?mt=8" class="btn btn-default btn-sm" target="_blank">
-									<i class="fa fa-github-alt"></i> &nbsp;<small>GitHub</small> <strong>Opensource</strong>
+								<a href="https://github.com/vc7/KPSDK" class="btn btn-default btn-sm" target="_blank">
+									<i class="fa fa-github-alt"></i> &nbsp;<small>Opensource</small>
 								</a>
 								<h4>KPSDK for iOS</h4>
 								<p>
@@ -352,7 +347,7 @@
 							</div>
 							<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
 								<a class="btn btn-default btn-sm btn-disable" target="_blank" disable>
-									<i class="fa fa-close"></i> &nbsp; <small>Unable to be Downloaded</small>
+									<i class="fa fa-close"></i> &nbsp; <small>Terminated</small>
 								</a>
 								<h4>Plus</h4>
 								<p>
@@ -365,7 +360,7 @@
 						<div class="row">
 							<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
 								<a class="btn btn-default btn-sm btn-disable" target="_blank" disable>
-									<i class="fa fa-close"></i> &nbsp; <small>Unable to be Downloaded</small>
+									<i class="fa fa-close"></i> &nbsp; <small>Terminated</small>
 								</a>
 								<h4>iPASS Scanner</h4>
 								<p>
@@ -375,7 +370,7 @@
 							</div>
 							<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
 								<a href="https://www.youtube.com/watch?v=kE1VyPfPyjg" class="btn btn-default btn-sm" target="_blank">
-									<i class="fa fa-youtube-play"></i> &nbsp;<small>YouTube</small> <strong>Video</strong>
+									<i class="fa fa-youtube-play"></i> &nbsp;<small>Demo Video</small>
 								</a>
 								<h4>Dot</h4>
 								<h4 class="text-warning">First Prize</h4>
@@ -394,7 +389,8 @@
 				<h2 id="career">Career</h2>
 				<div class="row">
 					<ul>
-						<li><span class="label label-primary">2017 -</span> <strong>BASE 株式会社</strong> <i>- BASE, Inc., Japan</i></li>
+						<li><span class="label label-primary">2019 - 2020</span> <strong>Engineer (iOS)</strong> <i>- Origami, Inc., Japan</i></li>
+						<li><span class="label label-primary">2017 - 2019</span> <strong>Engineer (iOS)</strong> <i>- BASE, Inc., Japan</i></li>
 						<li><span class="label label-primary">2016 - 2017</span> <strong>Contract iOS Developer</strong> <i>- Gamania Group., Taiwan</i></li>
 						<li><span class="label label-primary">Late 2015</span> <strong>Freelancer</strong></li>
 						<li><span class="label label-primary">2014 - 2015</span> <strong>iOS Engineer</strong> - <i>Spring House Entertainment Technology Inc., Taiwan</i></li>
@@ -402,7 +398,7 @@
 						<li><span class="label label-primary">Early 2013</span> <strong>Chief Development Officer of iOS</strong> - <i>Ans Global Corporation, Taiwan</i></li>
 					</ul>
 				</div>	
-				<h2 id="talks">Community Talks</h2>
+				<h2 id="talks">Talks</h2>
 					<h3>2018</h3>
 					<h4>Sept.</h4>
 					<ul>
